--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "@tanstack/react-query": "^5.84.1",
     "axios": "^1.8.4",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
